Update favicon and logo presentation

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="ticonb.png" />
+    <link rel="icon" type="image/png" href="favicontrenniq.png" sizes="64x64" />
     <title>Coming Soon &mdash; A Complete Brand Is Loading</title>
     <style>
       * {
@@ -63,7 +63,7 @@
       .logo-placeholder {
         width: 80px;
         height: 80px;
-        border-radius: 999px;
+        border-radius: 16px;
         border: 2px solid rgba(148, 163, 184, 0.4);
         display: flex;
         align-items: center;
@@ -79,7 +79,7 @@
         width: 100%;
         height: 100%;
         object-fit: contain;
-        border-radius: inherit;
+        border-radius: 10px;
         z-index: 1;
       }
 
